Better file structure

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Conv_Model import Conv_Net, dataprep, Trainer\n",
+    "from Conv_Model import Conv_Net\n",
+    "from Trainer import Trainer\n",
     "from Flat_Model import Linear_Net\n",
-    "from main import plot_loss\n",
+    "from main import plot_loss, k_fold_cross_validation\n",
     "\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -18,189 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch: 1/3, Model: Linear_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:02<00:00, 489.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 Accuracy: 0.8218510786360473\n",
-      "\n",
-      "Epoch: 2/3, Model: Linear_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:03<00:00, 463.27it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2 Accuracy: 0.9338900487125957\n",
-      "\n",
-      "Epoch: 3/3, Model: Linear_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:02<00:00, 501.11it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3 Accuracy: 0.9505915100904663\n",
-      "\n",
-      "Epoch: 1/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:04<00:00, 351.84it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 Accuracy: 0.5059151009046625\n",
-      "\n",
-      "Epoch: 2/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:03<00:00, 359.58it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2 Accuracy: 0.7800974251913709\n",
-      "\n",
-      "Epoch: 3/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:03<00:00, 409.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3 Accuracy: 0.8462073764787752\n",
-      "\n",
-      "Epoch: 4/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:03<00:00, 424.33it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4 Accuracy: 0.8816979819067502\n",
-      "\n",
-      "Epoch: 5/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:03<00:00, 470.65it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5 Accuracy: 0.9018789144050104\n",
-      "\n",
-      "Epoch: 6/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:02<00:00, 495.52it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6 Accuracy: 0.9164926931106472\n",
-      "\n",
-      "Epoch: 7/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:02<00:00, 581.67it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7 Accuracy: 0.9331941544885177\n",
-      "\n",
-      "Epoch: 8/8, Model: Conv_Net\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 1437/1437 [00:02<00:00, 582.36it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8 Accuracy: 0.9290187891440501\n"
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 4, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m digits \u001b[38;5;241m=\u001b[39m datasets\u001b[38;5;241m.\u001b[39mload_digits()\n\u001b[0;32m      2\u001b[0m ims, labs \u001b[38;5;241m=\u001b[39m digits\u001b[38;5;241m.\u001b[39mimages, digits\u001b[38;5;241m.\u001b[39mtarget\n\u001b[1;32m----> 4\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m k_fold_cross_validation(ims, labs, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      7\u001b[0m rttL, rttC \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m8\u001b[39m\n\u001b[0;32m      9\u001b[0m trainerL \u001b[38;5;241m=\u001b[39m Trainer(Linear_Net, X_train, y_train, X_test, y_test)\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 1)"
      ]
     }
    ],
@@ -208,15 +38,13 @@
     "digits = datasets.load_digits()\n",
     "ims, labs = digits.images, digits.target\n",
     "\n",
-    "data = train_test_split(ims, labs, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = k_fold_cross_validation(ims, labs, 1)\n",
     "\n",
-    "X_trainL, X_testL, y_trainL, y_testL = dataprep(Linear_Net(), data=data) \n",
-    "X_trainC, X_testC, y_trainC, y_testC = dataprep(Conv_Net(), data=data)\n",
     "\n",
     "rttL, rttC = 3, 8\n",
     "\n",
-    "trainerL = Trainer(Linear_Net, X_trainL, y_trainL, X_testL, y_testL)\n",
-    "trainerC = Trainer(Conv_Net, X_trainC, y_trainC, X_testC, y_testC)\n",
+    "trainerL = Trainer(Linear_Net, X_train, y_train, X_test, y_test)\n",
+    "trainerC = Trainer(Conv_Net, X_train, y_train, X_test, y_test)\n",
     "\n",
     "## Train models and get training loss\n",
     "Lloss, LinTrainAcc = trainerL.train(epochs=rttL, plot_loss=True)\n",
@@ -229,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9722222222222222, 0.9)"
+       "(0.1213132999443517, 0.1001669449081803)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
