--- a/playground.ipynb
+++ b/playground.ipynb
@@ -19,18 +19,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 4, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m digits \u001b[38;5;241m=\u001b[39m datasets\u001b[38;5;241m.\u001b[39mload_digits()\n\u001b[0;32m      2\u001b[0m ims, labs \u001b[38;5;241m=\u001b[39m digits\u001b[38;5;241m.\u001b[39mimages, digits\u001b[38;5;241m.\u001b[39mtarget\n\u001b[1;32m----> 4\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m k_fold_cross_validation(ims, labs, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      7\u001b[0m rttL, rttC \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m8\u001b[39m\n\u001b[0;32m      9\u001b[0m trainerL \u001b[38;5;241m=\u001b[39m Trainer(Linear_Net, X_train, y_train, X_test, y_test)\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 1)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch: 1/3, Model: Linear_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:04<00:00, 289.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 Accuracy: 0.8101529902642559\n",
+      "\n",
+      "Epoch: 2/3, Model: Linear_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:04<00:00, 295.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 Accuracy: 0.9429763560500696\n",
+      "\n",
+      "Epoch: 3/3, Model: Linear_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:04<00:00, 295.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 Accuracy: 0.9534075104311543\n",
+      "\n",
+      "Epoch: 1/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:05<00:00, 261.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 Accuracy: 0.5458970792767733\n",
+      "\n",
+      "Epoch: 2/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:05<00:00, 263.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 Accuracy: 0.8171070931849791\n",
+      "\n",
+      "Epoch: 3/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:04<00:00, 288.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 Accuracy: 0.8678720445062587\n",
+      "\n",
+      "Epoch: 4/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:04<00:00, 300.45it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 Accuracy: 0.9054242002781642\n",
+      "\n",
+      "Epoch: 5/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:05<00:00, 272.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 Accuracy: 0.9255910987482615\n",
+      "\n",
+      "Epoch: 6/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:05<00:00, 275.83it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6 Accuracy: 0.9339360222531293\n",
+      "\n",
+      "Epoch: 7/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:05<00:00, 256.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7 Accuracy: 0.9436717663421419\n",
+      "\n",
+      "Epoch: 8/8, Model: Conv_Net\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 1438/1438 [00:05<00:00, 268.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8 Accuracy: 0.9624478442280946\n"
      ]
     }
    ],
@@ -38,7 +209,7 @@
     "digits = datasets.load_digits()\n",
     "ims, labs = digits.images, digits.target\n",
     "\n",
-    "X_train, X_test, y_train, y_test = k_fold_cross_validation(ims, labs, 1)\n",
+    "X_train, X_test, y_train, y_test = k_fold_cross_validation(ims, labs, 5).__next__()\n",
     "\n",
     "\n",
     "rttL, rttC = 3, 8\n",
@@ -57,16 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.1213132999443517, 0.1001669449081803)"
+       "(0.9526462395543176, 0.9331476323119777)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -167,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4., 7., 1., 1., 1., 4., 7., 9., 7., 9.])"
+       "array([4., 7., 1., 1., 4., 4., 7., 7., 7., 9., 4., 7.])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
